changed homepage thumbnail box-shadow, fixed jumping title text in homepage thumbnail - does not fix other thumbnail pages

--- a/app/assets/stylesheets/home_page.css.scss
+++ b/app/assets/stylesheets/home_page.css.scss
@@ -562,20 +562,20 @@
 	}
 	.media-info {
 		position: absolute;
-		bottom: 6px;
+		bottom: 5px;
 		left: 8px;
 		right: 8px;
 		z-index: 1;
 		.media-speaker-name	{
 			font-size: 14px;
 			color: white;
-			margin-bottom: 2px;
+			margin-bottom: 3px;
 		}
 		.media-title {
 			font-size: 16px;
 			font-weight: 700;
 			color: white;
-			line-height: 1.2;
+			line-height: 1.3;
 		}
 	}
 }
@@ -603,8 +603,8 @@
 
 .media-thumbnail.livestream {
 	.media-title {
-		height: 16px;
-		overflow: visible;
+		height: 1.3em;
+		overflow: hidden;
 	}
 }
 
@@ -667,24 +667,24 @@
 .media-thumbnail.show-description:hover {
 	overflow: initial;
 	z-index: 5;
-	box-shadow: 0px 0px 15px black;
+	box-shadow: 0px 0px 20px 2px black;
 	.thumbnail-gradient {
 		top: 0px;
-		background: rgba(0,0,0,0.7);
+		background: rgba(0,0,0,0.6);
 	}
 	.thumbnail-overlay-gradient {
 		bottom: 0px;
 	}
 	.thumbnail-description {
 		display: -webkit-box;
-		color: $gray;
+		color: #5f5f5f;
 		padding: 10px 12px;
 		z-index: -1;
 		top: 0px;
 		height: 144px;
 		p {
-			line-height: 1.2;
-			height: 100%;
+			line-height: 1.3;
+			height: 10em;
 		}
 	}
 	.media-info {
@@ -924,6 +924,10 @@
 	}
 	.media-thumbnails:not(.course-thumbnails) a:nth-child(5n) {
 		display: none;
+	}
+
+	.media-thumbnails a {
+		margin-bottom: 26px;
 	}
 
 	.media-thumbnail:hover {
